; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/platform/intel/extr_iosf_mbi.c_iosf_mbi_pci_read_mdr.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/platform/intel/extr_iosf_mbi.c_iosf_mbi_pci_read_mdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@mbi_pdev = common dso_local global %struct.TYPE_4__* null, align 8
@ENODEV = common dso_local global i32 0, align 4
@MBI_MCRX_OFFSET = common dso_local global i32 0, align 4
@MBI_MCR_OFFSET = common dso_local global i32 0, align 4
@MBI_MDR_OFFSET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"PCI config access failed with %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i64*)* @iosf_mbi_pci_read_mdr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iosf_mbi_pci_read_mdr(i64 %0, i64 %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64* %2, i64** %7, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @mbi_pdev, align 8
  %10 = icmp ne %struct.TYPE_4__* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load i32, i32* @ENODEV, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %4, align 4
  br label %49

14:                                               ; preds = %3
  %15 = load i64, i64* %5, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %26

17:                                               ; preds = %14
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** @mbi_pdev, align 8
  %19 = load i32, i32* @MBI_MCRX_OFFSET, align 4
  %20 = load i64, i64* %5, align 8
  %21 = call i32 @pci_write_config_dword(%struct.TYPE_4__* %18, i32 %19, i64 %20)
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %17
  br label %43

25:                                               ; preds = %17
  br label %26

26:                                               ; preds = %25, %14
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** @mbi_pdev, align 8
  %28 = load i32, i32* @MBI_MCR_OFFSET, align 4
  %29 = load i64, i64* %6, align 8
  %30 = call i32 @pci_write_config_dword(%struct.TYPE_4__* %27, i32 %28, i64 %29)
  store i32 %30, i32* %8, align 4
  %31 = load i32, i32* %8, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %26
  br label %43

34:                                               ; preds = %26
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** @mbi_pdev, align 8
  %36 = load i32, i32* @MBI_MDR_OFFSET, align 4
  %37 = load i64*, i64** %7, align 8
  %38 = call i32 @pci_read_config_dword(%struct.TYPE_4__* %35, i32 %36, i64* %37)
  store i32 %38, i32* %8, align 4
  %39 = load i32, i32* %8, align 4
  %40 = icmp slt i32 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %34
  br label %43

42:                                               ; preds = %34
  store i32 0, i32* %4, align 4
  br label %49

43:                                               ; preds = %41, %33, %24
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** @mbi_pdev, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 0
  %46 = load i32, i32* %8, align 4
  %47 = call i32 @dev_err(i32* %45, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %46)
  %48 = load i32, i32* %8, align 4
  store i32 %48, i32* %4, align 4
  br label %49

49:                                               ; preds = %43, %42, %11
  %50 = load i32, i32* %4, align 4
  ret i32 %50
}

declare dso_local i32 @pci_write_config_dword(%struct.TYPE_4__*, i32, i64) #1

declare dso_local i32 @pci_read_config_dword(%struct.TYPE_4__*, i32, i64*) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
